# same-session

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  pages.yml  release.yml  supply-chain.yml
crates/samesession-adapter-claude/: Cargo.toml
crates/samesession-adapter-claude/src/: lib.rs
crates/samesession-adapter-codex/: Cargo.toml
crates/samesession-adapter-codex/src/: lib.rs
crates/samesession-capsule/: Cargo.toml
crates/samesession-capsule/src/: lib.rs
crates/samesession-cli/: Cargo.toml
crates/samesession-cli/src/: main.rs
crates/samesession-config/: Cargo.toml
crates/samesession-config/src/: lib.rs
crates/samesession-core/: Cargo.toml
crates/samesession-core/src/: lib.rs
crates/samesession-git/: Cargo.toml
crates/samesession-git/src/: lib.rs
crates/samesession-lock/: Cargo.toml
crates/samesession-lock/src/: lib.rs
crates/samesession-policy/: Cargo.toml
crates/samesession-policy/src/: lib.rs
crates/samesession-workspace/: Cargo.toml
crates/samesession-workspace/src/: lib.rs
schemas/: lease-v1.json  native-capsule-v1.json  project-config-v1.json  public-checkpoint-v1.json
tests/: e2e-dirty-migration.sh
website/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  visual.spec.ts  vite.config.ts
website/src/: App.tsx  main.tsx  styles.css
