[workspace]
members = [
  "crates/samesession-adapter-claude",
  "crates/samesession-adapter-codex",
  "crates/samesession-cli",
  "crates/samesession-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vamgan/same-session"
homepage = "https://github.com/vamgan/same-session"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
