[workspace]
members = [
  "crates/samesession-adapter-claude",
  "crates/samesession-adapter-codex",
  "crates/samesession-capsule",
  "crates/samesession-cli",
  "crates/samesession-core",
  "crates/samesession-git",
  "crates/samesession-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vamgan/same-session"
homepage = "https://github.com/vamgan/same-session"
rust-version = "1.85"

[workspace.dependencies]
age = "0.11.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.11.0"
tar = { version = "0.4.46", default-features = false }
tempfile = "3.23"
thiserror = "2.0"
time = { version = "=0.3.44", features = ["formatting", "parsing"] }
ulid = "1.2.1"
walkdir = "2.5"
zstd = "0.13.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
