[package]
name = "samesession-adapter-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Native Claude Code session discovery adapter for SameSession"
keywords = ["ai", "claude", "session", "migration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
dirs.workspace = true
serde_json.workspace = true
samesession-core = { version = "0.1.0", path = "../samesession-core" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
