[package]
name = "samesession-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Provider-neutral native coding-agent session model for SameSession"
keywords = ["ai", "agents", "session", "migration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
