[package]
name = "samesession-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Security policy and secret scanning for SameSession"
keywords = ["ai", "agents", "session", "migration", "security"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
